--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -82,7 +82,7 @@
         <div class="si_out">
             <ul>
                 <li>
-                    <a href="/static/login/#">
+                    <a href="https://gitee.com/oauth/authorize?client_id=bef6a2fd55b94530f485897f486ea969198585094786a4badb578a79dec3e54a&redirect_uri=http://auth.gulimall.com/oauth/success&response_type=code">
                         <img src="/static/login/JD_img/qq.png"/>
                         <span>QQ</span>
                     </a>
