--- a/gulimall-cart/src/main/resources/templates/cartList.html
+++ b/gulimall-cart/src/main/resources/templates/cartList.html
@@ -18,7 +18,7 @@
 					<ul class="header-left">
 						<li>
 
-							<a href="">首页</a>
+							<a href="http://gulimall.com">首页</a>
 						</li>
 
 					</ul>
@@ -44,7 +44,7 @@
 			<div class="one_sousuo">
 				<div class="one_search_top">
 					<div class="one_top_left">
-						<a href="/static/cart/" class="one_left_logo"><img src="/static/cartimg/logo1.jpg"></a>
+						<a href="http://gulimall.com" class="one_left_logo"><img src="/static/cart/img/logo1.jpg"></a>
 						<a href="#" class="one_left_link">购物车</a>
 					</div>
 					<div class="one_top_right">
@@ -88,7 +88,7 @@
 								<ol>
 									<li><input type="checkbox" class="check" th:value="${cartInfo.skuId}" onchange="checkSku(this)" th:checked="(${cartInfo.isChecked}==1)?'true':'false'" /></li>
 									<li>
-										<dt><img th:src="/static/cart${cartInfo.imgUrl}" src="/static/cartimg\shop1.jpg" alt=""></dt>
+										<dt><img th:src="/static/cart${cartInfo.imgUrl}" src="/static/cart/img\shop1.jpg" alt=""></dt>
 										<dd th:onclick="'toItem('+${cartInfo.skuId}+')'">
 											<p>
 												<span th:text="${cartInfo.skuName}">TCL 55A950C 55英寸32核</span>
@@ -121,7 +121,7 @@
                         <ol>
                             <li><input type="checkbox"  class="check"></li>
                             <li>
-                                <dt><img src="/static/cartimg\shop1.jpg" alt=""></dt>
+                                <dt><img src="/static/cart/img\shop1.jpg" alt=""></dt>
                                 <dd>
                                     <p>
 
@@ -168,8 +168,8 @@
 						<font style="color:#e64346;font-weight:bold;" class="sumNum"> </font>&nbsp;
 
 						<ul>
-							<li><img src="/static/cartimg/buyNumleft.png" alt=""></li>
-							<li><img src="/static/cartimg/buyNumright.png" alt=""></li>
+							<li><img src="/static/cart/img/buyNumleft.png" alt=""></li>
+							<li><img src="/static/cart/img/buyNumright.png" alt=""></li>
 						</ul>
 					</div>
 					<div>
@@ -185,11 +185,11 @@
 
 		<div class="One_isDel">
 			<p>
-				<span>删除</span><span><img src="/static/cartimg/错误.png" alt=""></span>
+				<span>删除</span><span><img src="/static/cart/img/错误.png" alt=""></span>
 			</p>
 			<div>
 				<dl>
-					<dt><img src="/static/cartimg/感叹三角形 (2).png" alt=""></dt>
+					<dt><img src="/static/cart/img/感叹三角形 (2).png" alt=""></dt>
 					<dd>
 						<li>删除商品？</li>
 						<li>您可以选择移到关注，或删除商品。</li>
@@ -203,20 +203,20 @@
 		</div>
 		<div class="One_moveGzIfNull">
 			<p>
-				<span>删除</span><span><img src="/static/cartimg/错误.png" alt=""></span>
+				<span>删除</span><span><img src="/static/cart/img/错误.png" alt=""></span>
 			</p>
 			<dl>
-				<dt><img src="/static/cartimg/感叹三角形 (2).png" alt=""></dt>
+				<dt><img src="/static/cart/img/感叹三角形 (2).png" alt=""></dt>
 				<dd>请至少选中一件商品！</dd>
 			</dl>
 		</div>
 		<div class="One_moveMyGz">
 			<p>
-				<span>删除</span><span><img src="/static/cartimg/错误.png" alt=""></span>
+				<span>删除</span><span><img src="/static/cart/img/错误.png" alt=""></span>
 			</p>
 			<div>
 				<dl>
-					<dt><img src="/static/cartimg/感叹三角形 (2).png" alt=""></dt>
+					<dt><img src="/static/cart/img/感叹三角形 (2).png" alt=""></dt>
 					<dd>
 						<li>移到关注</li>
 						<li>移动后选中商品将不再购物车中显示</li>
@@ -230,10 +230,10 @@
 		</div>
 		<div class="One_clearShop">
 			<p>
-				<span>提示</span><span><img src="/static/cartimg/错误.png" alt=""></span>
+				<span>提示</span><span><img src="/static/cart/img/错误.png" alt=""></span>
 			</p>
 			<dl>
-				<dt><img src="/static/cartimg/感叹三角形 (2).png" alt=""></dt>
+				<dt><img src="/static/cart/img/感叹三角形 (2).png" alt=""></dt>
 				<dd>没有下柜商品!</dd>
 			</dl>
 		</div>
