--- a/gulimall-order/src/main/resources/templates/confirm.html
+++ b/gulimall-order/src/main/resources/templates/confirm.html
@@ -590,7 +590,9 @@
 <!--</div>-->
 <!--</div>-->
 <!--主体部分-->
-<p class="p1">填写并核对订单信息</p>
+<p class="p1">填写并核对订单信息
+    <span style="color: red" th:if="${msg!=null}" th:text="${msg}"></span>
+</p>
 <div class="section">
     <!--收货人信息-->
     <div class="top-2">
@@ -739,7 +741,12 @@
         </p>
         <p class="yfze_b">寄送至：<span id="recieveAddressEle"></span> 收货人： <span id="recieveEle"></span></p>
     </div>
-    <button class="tijiao">提交订单</button>
+    <form action="http://order.gulimall.com/submitOrder" method="post">
+        <input id="addrIdInput" type="hidden" name="addrId" >
+        <input id="payPriceInput" type="hidden" name="payPrice" >
+        <input id="orderTokenInput" type="hidden" name="orderToken" th:value="${orderConfirmData.orderToken}">
+        <button class="tijiao" type="submit">提交订单</button>
+    </form>
 </div>
 </div>
 
@@ -990,12 +997,15 @@
     })
 
     function getFare(addrId) {
+        // 给表单会填选择的地址
+        $("#addrIdInput").val(addrId)
         $.get("http://gulimall.com/api/ware/wareinfo/fare?addrId=" + addrId, function (data) {
             // console.log(data)
             $("#fareEle").text(data.data.fare)
             let total = [[${orderConfirmData.total}]]
             total = total * 1 + data.data.fare * 1
             $("#payPriceEle").text(total)
+            $("#payPriceInput").val(total)
             $("#recieveAddressEle").text(data.data.address.province + " " + data.data.address.detailAddress)
             $("#recieveEle").text(data.data.address.name)
         })
