--- a/gulimall-product/src/main/resources/templates/index.html
+++ b/gulimall-product/src/main/resources/templates/index.html
@@ -104,7 +104,7 @@
                 </li>
                 <span>|</span>
                 <li>
-                    <a href="http://order.gulimall.com/list.html">我的订单</a>
+                    <a href="http://member.gulimall.com/memberOrder.html">我的订单</a>
                 </li>
 
 
